--- a/css/styles.css
+++ b/css/styles.css
@@ -51,3 +51,12 @@ footer {
     border-top: none;
     padding: 10px;
 }
+
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.carousel {
+    border: solid #5637DD;
+}
+
